Fix vertical align of last panel cell in row

--- a/less/bootstrap-theme/panels.less
+++ b/less/bootstrap-theme/panels.less
@@ -394,6 +394,15 @@
     }
 }
 
+@media (min-width: @screen-sm-min) {
+    // fix vertical align of last cell
+    .panel-cell {
+        &:last-child {
+            margin-top: -5px;
+        }
+    }
+}
+
 
 // Variantes
 // -------------------------
